# spring-security-code-grant-oidc-single-app-integration/src/main/java/com/springboot/project/entity/BankAccountEntity.java
@@ -1,15 +1,24 @@
 package com.springboot.project.entity;
 
-import jakarta.persistence.*;
 import java.io.Serial;
 import java.math.BigDecimal;
 import java.util.List;
+
+import jakarta.persistence.CascadeType;
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.EnumType;
+import jakarta.persistence.Enumerated;
+import jakarta.persistence.FetchType;
+import jakarta.persistence.OneToMany;
+import jakarta.persistence.Table;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
 import org.hibernate.annotations.Fetch;
 import org.hibernate.annotations.FetchMode;
+import org.hibernate.annotations.Generated;
 
 @Getter
 @Setter
@@ -20,6 +29,10 @@ import org.hibernate.annotations.FetchMode;
 public class BankAccountEntity extends BaseEntity {
 
     @Serial private static final long serialVersionUID = -7913273199791663507L;
+
+    @Generated
+    @Column(name = "sequence_number")
+    private Long sequenceNumber;
 
     @Column(name = "first_name")
     private String firstName;
